# arvore

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  error.rs  git.rs  main.rs
src/commands/: clean.rs  completions.rs  create.rs  list.rs  mod.rs  open.rs  path.rs  remove.rs
tests/: integration.rs
