[package]
name = "arvore"
version = "0.1.0"
edition = "2024"
description = "A fast git worktree manager"
license = "MIT"
repository = "https://github.com/MaximeRVY/arvore"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "3"
dialoguer = "0.11"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
